# escw-mcu

./: .onedev-buildspec.yml  Cargo.toml  README.md  rustfmt.toml
src/: common.rs  lib.rs
src/peripheral/: flash.rs  i2c.rs  io.rs  mod.rs  spi.rs  uart.rs  wdt.rs
src/peripheral/io/: io_state.rs
