[package]
name = "escw-mcu"
version = "0.1.0"
edition = "2021"
authors = ["Khose-ie<hyklose@outlook.com>"]
description = "Embedded software C wrapper of MCU."
license = "GPL-2.0"
repository = "https://github.com/khose-ie/escw-mcu"
homepage = "https://github.com/khose-ie/escw-mcu"

[lib]
name = "escw_mcu"

[dependencies]

[features]
io = []
uart = []
i2c = []
spi = []

[package.metadata.docs.rs]
features = ["io", "uart", "i2c", "spi"]
